		When all akas are busy, a session is impossible and the session
		is refused. Thanks to Przemyslaw Kwiatkowski for finding and
		documenting this bug.
		The total session avg cps is now corrected with the two seconds
		session close delay time.
		During binkp handshake increased the timer of the receiver to
		avoid handshake timeouts.

	mbfido:
		Removed sync calls that are now in execute.

	mbfile:
		Removed sync calls that are now in execute.

	mbdiff:
		Removed sync calls that are now in execute.

	mbtask:
		Will call points if a call method is available.
		Merged tmail patches from Przemyslaw Kwiatkowski.

	script:
		New scripts are installed with an extension of .new, you need
		to check yourself if you can use them to replace your own
		possible modified scripts.
		Updated the hatch script to abort if it's not configured.
		If the user skips to hatch a file, the questions for the magic
		and replace command are not shown anymore.

	examples:
		Changed Dutch newfiles template file.

	html:
		Added upgrade procedure.


v0.39.6		11-Jan-2004 - 14-Jan-2004

        upgrade:
                Check setting 7.x.3.18 for each node. If you know the node uses
                Irex between 2.24 and 2.29 then set this to Yes or you won't 
		have good sessions without files with this mailer. Sessions
		with Irex that do transfer some file are Ok.

	mbcico:
		New binkp/1.1 driver. Check the upgrade for your Irex links.
		In case of troubles please report these. 
		In the mbcico directory are 2 files, binkpold.c and binkpold.h
		if they are renamed to binkp.c and binkp.h you get the old 1.0
		driver back. After some weeks I hope to remove these 2 old 
		files.
		Added support for T-Mail fileboxes, partly written and info
		provided by Przemyslaw Kwiatkowski (2:480/127).

	mbout:
		Added support for T-Mail fileboxes.

	mbtask:
		Added support for T-Mail fileboxes.

	mbsetup:
		Reorganised menu 1.4 screen 1 and 2.
		Added settings for T-Mail filebox paths in the second screen