@@ -35,6 +35,9 @@ v0.39.7		14-Jan-2004
 		session close delay time.
 		During binkp handshake increased the timer of the receiver to
 		avoid handshake timeouts.
+		Added PLZ compression option to binkp. Not yet 100% finished
+		but it seems to work. Not yet tested against latest Radius beta.
+		Be carefull!
 
 	mbfido:
 		Removed sync calls that are now in execute.
